# 2d-multiplayer-survival-mmorpg

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.dev  ENVIRONMENT_SETUP.md  KOKORO_INTEGRATION.md  LICENSE  NOTICE  README.md  SECURE_API_SETUP.md  WHISPER_OPTIMIZATION.md  docker-compose.yml  index.html  package-lock.json  package.json  prerender-routes.json  railway-client.toml  railway.toml  spacetime.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
server/: Cargo.toml  build.rs  deploy-local-clean.ps1  deploy-local.ps1  deploy-production-clean.ps1  deploy-production.ps1  seed-sova-config.ps1
server/docs/: building_enclosure_system.md
server/src/: active_effects.rs  active_equipment.rs  ai_brewing.rs  alk.rs  animal_collision.rs  armor.rs  backpack.rs  barbecue.rs  barrel.rs  basalt_column.rs  beacon_event.rs  beehive.rs  bone_carving.rs  bones.rs  brew_categories_design.md  broth_pot.rs  building.rs  building_decay.rs  building_enclosure.rs  cairn.rs  campfire.rs  chat.rs  cloud.rs  collectible_resources.rs  combat.rs  combat_ladle_heating.rs  compost.rs  compound_buildings.rs  consumables.rs  container_access.rs  cooking.rs  cooking_station.rs  coral.rs  crafting.rs  crafting_queue.rs  death_marker.rs  door.rs  drinking.rs  drone.rs  dropped_item.rs  (+78 more)
server/src/items_database/: ammunition.rs  armor.rs  builders.rs  consumables.rs  materials.rs  mod.rs  placeables.rs  seeds.rs  spoiled_items.rs  tools.rs  weapons.rs
server/src/wild_animal_npc/: animal_corpse.rs  bee.rs  caribou.rs  core.rs  crab.rs  crow.rs  drowned_watch.rs  fox.rs  hare.rs  (+16 more)
(+599 files in other folders)
