[package]
name = "vibe-survival-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.0", features = ["unstable"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noise = "0.8" 
jsonwebtoken = "8" # Or the latest compatible version
lazy_static = "1.4" # For PLANT_CONFIGS HashMap
base64 = "0.22"